[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
]
